--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -96,3 +96,22 @@ button:focus-visible {
 }
 
 
+/* .Button {
+  background-color: hsl(200 , 100% , 50% );
+  color: white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+} */
+
+.student{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2em;
+  padding: 10px;
+  border: 1px solid hsla(0, 9%, 41%, 0.922);
+}
+
+.student p{
+  margin: 0;
+}
